Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-53669

Crash in basicshapes-cpp example when enabling shapes

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.7.0
    • 5.7.0 RC
    • Qt3D
    • None
    • Windows 7 64bit, OpenGL build.
    • d561d938d036af49188c06c84a8b007964e60c5f

      There's an assert in the example when enabling the shapes:
      ASSERT: "m_dna == other.m_dna" in file materialsystem\shader.cpp, line 444.

      Happens randomly when enabling a disabled shape.

        For Gerrit Dashboard: QTBUG-53669
        # Subject Branch Project Status CR V

            seanharmer Sean Harmer
            anmaatta Antti Määttä
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes